# AI-Qustion-Recommendation-System

./: .dockerignore  README.md  docker-compose.yml  flowchart.txt  procfile  pyproject.toml
backend/: Dockerfile
backend/app/: main.py
backend/app/api/: process.py  recommend.py  upload.py
backend/app/services/: file_service.py
backend/app/utils/: exception.py  logger.py
backend/data/: questions.db
backend/data/models/: best_model.pkl
backend/data/raw/: 20260420_114618_ead3355b052048c5acbc2721be8c6500_sample_questions_math.docx  20260420_114642_7b7da3b06de44c47a09f767d8088583f_sample_questions_v2.docx
backend/db/: database.py  db_service.py
backend/ml/: dataset.py  evaluate.py  model.py  topic_tagger.py  train.py
backend/preprocessing/: preprocessing.py
backend/tests/: tests.py
deployment/kubernetes/: backend-deployment.yaml  backend-hpa.yaml  frontend-deployment.yaml  ingress.yaml  service.yaml
frontend/: Dockerfile  streamlit_app.py
frontend/pages/: 1_upload.py  2_recommend.py
frontend/utils/: api_client.py
